--- a/FoodTracker/Base.lproj/Main.storyboard
+++ b/FoodTracker/Base.lproj/Main.storyboard
@@ -48,6 +48,7 @@
                                     <outlet property="nameLabel" destination="VSs-ob-VvY" id="kmg-9P-mpK"/>
                                     <outlet property="photoImageView" destination="4wm-db-ldB" id="6Ny-JI-kIa"/>
                                     <outlet property="ratingControl" destination="FKy-fU-vEq" id="uU8-vx-eL3"/>
+                                    <segue destination="BYZ-38-t0r" kind="show" identifier="ShowDetail" id="pqq-Ea-IPq"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -176,10 +177,13 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6S3-oh-xyI" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="259.19999999999999" y="132.23388305847078"/>
+            <point key="canvasLocation" x="303" y="614"/>
         </scene>
     </scenes>
     <resources>
         <image name="defaultPhoto" width="540" height="540"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="pqq-Ea-IPq"/>
+    </inferredMetricsTieBreakers>
 </document>
